Guess character-by-character!

--- a/index.html
+++ b/index.html
@@ -20,11 +20,17 @@
     <br>
     <image id="original-image" src="redacted_gimp_8x8.png"/>
     <br>
-    <label>Current Best Guess:</label>
+    <label>Best Guess:</label>
     <br>
-    <image id="preview-image" src=""/>
+    <image id="best-preview-image" src=""/>
     <br>
     <input type="text" id="best-guess">
+    <br>
+    <label>Current Guess:</label>
+    <br>
+    <image id="current-preview-image" src=""/>
+    <br>
+    <input type="text" id="current-guess">
     <br>
 
     <!-- You can also require other files to run in this process -->
