--- a/index.html
+++ b/index.html
@@ -11,26 +11,27 @@
       http-equiv="X-Content-Security-Policy"
       content="default-src 'self'; script-src 'self'"
     />
+    <link rel="stylesheet" type="text/css" href="index.css">
   </head>
   <body>
     <button id="start-button">Click to Start</button>
 
     <br><br>
-    <label>Redacted Text:</label>
+    <label class="text-label">Redacted Text:</label>
     <br>
     <image id="original-image" src="redacted_gimp_8x8.png"/>
     <br>
-    <label>Best Guess:</label>
-    <br>
-    <image id="best-preview-image" src=""/>
-    <br>
-    <input type="text" id="best-guess">
-    <br>
-    <label>Current Guess:</label>
+    <label class="text-label">Current Guess:</label>
     <br>
     <image id="current-preview-image" src=""/>
     <br>
     <input type="text" id="current-guess">
+    <br>
+    <label class="text-label">Best Guess:</label>
+    <br>
+    <image id="best-preview-image" src=""/>
+    <br>
+    <input type="text" id="best-guess">
     <br>
 
     <!-- You can also require other files to run in this process -->
